--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <title>SciPragna</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Welcome Dear Friends!</h1>      
+        <p>Lorum epsum dolor sit amet</p>
+      </div>
+        <p>This is some text.</p>      
+        <p>This is another text.</p>      
+    </div>
+
     
 
     <!-- Optional JavaScript -->
