--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="jumbotron">
         <center><h1>Welcome Dear Friends!</h1></center>      
         <div class="card">
-        <div class="card-body">Daily Quote</div>
+        <div class="card-body"><!-------Do not change below this line-------><div align="center"><iframe align="center" src="//widget.calendarlabs.com/v1/quot.php?cid=101&ver=1.2&uid=4852435626&c=random&l=en&cbg=009900&cb=1&cbc=666600&cf=calibri&cfg=FFFFFF&qfs=i&qta=left&tfg=FFFFFF&tfs=bi&afc=FFFFFF&afs=i" width="188" height="210" marginwidth=0 marginheight=0 frameborder=0 scrolling=no allowtransparency='true'>Loading...</iframe><div align="center" style="width:140px;font-size:10px;color:#333;">Daily Quotes by <a href="https://www.calendarlabs.com/" target="_blank" rel="nofollow" style="font-size:10px;text-decoration:none;color:#333;">CalendarLabs</a></div></div><!-------Do not change above this line-------></div>
         </div>
         <br>
         
