--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br>
         
         <div class="card bg-warning text-white">
-        <div class="card-body">CONTACT US</div>
+        <div class="card-body"><iframe src="https://minnit.chat/SciPragna?embed&&nickname=" style="border:none;width:100%;height:30%;" allowTransparency="true"></iframe><br><a href="https://minnit.chat/SciPragna" target="_blank">Free embeddable chatroom powered by Minnit Chat</a></div>1
         </div>
         <br>
         
